# cli-replay

./: .gitignore  README.md  pyproject.toml
.claude/skills/managing-task-lifecycle/scripts/: check_completion.py  validate_task_status.py
.github/workflows/: ci.yml
.paircoder/: config.yaml
.paircoder/context/: state.md
.paircoder/plans/: plan-2026-03-clireplay-v1.plan.yaml  plan-2026-03-plan-2026-03-clireplay-hardening.plan.yaml  plan-2026-03-plan-2026-03-line-delay-reflow.plan.yaml
.paircoder/tasks/: T1.1.task.md  T1.2.task.md  T1.3.task.md  T1.4.task.md  T1.5.task.md  T2.1.task.md  T2.2.task.md  T2.3.task.md  T2.4.task.md  T2.5.task.md  T3.1.task.md  T3.2.task.md  T3.3.task.md  T3.4.task.md  T3.5.task.md
cli_replay/: __init__.py  cli.py  player.py  recorder.py  redact.py  reflow.py  session.py
tests/: conftest.py  test_cli.py  test_player.py  test_recorder.py  test_redact.py  test_reflow.py  test_session.py
tests/fixtures/: bad_version.clirec  empty_session.clirec  multiline.clirec  sample.clirec
