[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "cli-replay"
version = "0.1.0"
description = "Record and replay CLI sessions at any terminal size"
requires-python = ">=3.11"

[project.scripts]
clirec = "cli_replay.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
